# TII_Polaris_Simulation

./: .gitignore  .gitmodules  Dockerfile  README.md  run.sh
catkin_ws/src/gazebo_plugins/: CMakeLists.txt  package.xml
catkin_ws/src/gazebo_plugins/src/: marker_model.urdf  path_drawer_plugin.cpp  simple_world_plugin.cpp
catkin_ws/src/path_generator/: CMakeLists.txt  package.xml
catkin_ws/src/path_generator/files/: others.csv  others_1.csv  wps.csv  wps_min.csv  wps_modified.csv  wps_red.csv  wps_reduced.csv
catkin_ws/src/path_generator/include/path_generator/: path_generator.hpp
catkin_ws/src/path_generator/src/: path_generator.cpp  path_generator_node.cpp
catkin_ws/src/path_generator/test/: test_path_generator.cpp
catkin_ws/src/path_trackers/pure_pursuit/: CMakeLists.txt  package.xml
catkin_ws/src/path_trackers/pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp  tracker.hpp
catkin_ws/src/path_trackers/pure_pursuit/src/: pure_pursuit.cpp  tracker.cpp
catkin_ws/src/path_trackers/utils/: math_utils.hpp
catkin_ws/src/path_trackers/utils/include/: math_utils.hpp
catkin_ws/src/polaris-gem-subtree/polaris_gem_simulator/gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
catkin_ws/src/polaris-gem-subtree/polaris_gem_simulator/gem_simulator/gem_gazebo/worlds/: simple_track_green.world
catkin_ws/src/stanley/: CMakeLists.txt  package.xml
catkin_ws/src/stanley/include/stanley/: stanley.hpp
catkin_ws/src/stanley/src/: stanley.cpp
catkin_ws/src/trajectory_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory_navigation/include/trajectory_navigation/: nav_state_machine.hpp  path_tracker.hpp  pure_pursuit_tracker.hpp  stanley_tracker.hpp
catkin_ws/src/trajectory_navigation/include/utils/: utils.hpp
catkin_ws/src/trajectory_navigation/launch/: navigation.launch
catkin_ws/src/trajectory_navigation/src/: nav_state_machine.cpp  navigation_node.cpp  pure_pursuit_tracker.cpp  stanley_tracker.cpp
catkin_ws/src/trajectory_navigation/test/: test_utils.cpp
