<?xml version="1.0"?>
<package format="2">
  <name>path_generator</name>
  <version>0.0.0</version>
  <description>The path_generator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="kmilo7204@gmail.com">Camilo Alvis</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>roslib</build_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roslib</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
